--- a/src/03-css-basic-learning/13-flex弹性布局/13-弹性布局笔记.md
+++ b/src/03-css-basic-learning/13-flex弹性布局/13-弹性布局笔记.md
@@ -171,7 +171,7 @@
 
 |属性值|描述|
 |:---|:---|
-|stretch|左对齐（默认）|
+|stretch|默认拉伸所有行来填满剩余空间（默认）|
 |flex-end|交叉轴起点对齐|
 |flex-end|交叉轴终点对齐|
 |center|交叉轴中点对齐|
@@ -208,7 +208,7 @@
 
 ### flex-grow项目主轴放大系数
 
-> flex项目的主尺寸的flex增长系数
+> flex项目的主轴尺寸的flex增长系数
 > 
 > flex属性在flex容器有剩余空间时才生效
 > 
@@ -217,7 +217,7 @@
 > 
 > 放大后后尺寸计算公式：
 > 所有项目的flex-grow值得总和加起来<1时
-> > 项目放大后的宽=项目元素宽+（剩余空间*所有项目的flex-grow值总和）*（flex-grow）/ 所有项目的flex-grow值总和
+> > 项目放大后的宽=项目元素原始宽+（剩余空间*所有项目的flex-grow值总和）*（flex-grow）/ 所有项目的flex-grow值总和
 > 
 > > 所有项目的flex-grow值得总和加起来>=1时
 > 项目放大后宽=项目元素宽+剩余空间*（flex-grow值）/ 所有项目的flex-grow值总和
@@ -234,3 +234,16 @@
 > 所有子项目缩放总宽=溢出宽*所有项目flex-shrink值之和
 > 项目收缩宽=((项目原始宽*flex-shrink值)/每个项目宽*flex-shrink值之和)*所有子项目缩放总宽
 > 项目缩放宽=项目原始宽-项目总收缩宽 
+
+### flex-basis分配剩余空间前，项目占据主轴空间大小
+
+> flex-basis 在分配剩余空间前，项目占据的主轴空间
+> 浏览器根据这个属性，计算主轴是否有多余空间，默认值为auto，及项目本来的空间大小
+> flex-basis的优先级高于width
+
+### flex项目放大、缩小、空间占据
+
+> flex是flex-grow、flex-shrink、flex-basis的缩写，默认值为0 1 auto
+> flex auto表示flex：1 1 auto
+> flex：none 表示flex：0 0 auto
+> flex：1表示flex：flex：1 1 0% ，当没有一点剩余空间时，原素会消失
