--- a/src/03-css-basic-learning/13-flex弹性布局/13-弹性布局笔记.md
+++ b/src/03-css-basic-learning/13-flex弹性布局/13-弹性布局笔记.md
@@ -18,9 +18,9 @@
 >
 > 添加flex布局容器里的项目不再具有float、clear、vertical-align属性。
 
-![1660011848594](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660011848594.png)
+![1660011848594](./images/1660011848594.png)
 
-![1660011789039](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660011789039.png)
+![1660011789039](./images/1660011789039.png)
 
 ### flex容器的主轴和交叉轴
 
@@ -48,11 +48,11 @@
 
 
 
-![1660011989598](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660011989598.png)
+![1660011989598](./images/1660011989598.png)
 
-![1660027823116](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660027823116.png)
+![1660027823116](./images/1660027823116.png)
 
-![1660027892350](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660027892350.png)
+![1660027892350](./images/1660027892350.png)
 
 ## flex容器属性
 
@@ -81,7 +81,7 @@
       }
 ```
 
-![1660029880157](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660029880157.png)
+![1660029880157](./images/1660029880157.png)
 
 
 ### flex-wrap项目主轴换行
@@ -119,7 +119,7 @@
       }
 ```
 
-![1660030272646](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660030272646.png)
+![1660030272646](./images/1660030272646.png)
 
 ### justify-content项目主轴上的对齐方式
 
@@ -153,7 +153,7 @@
       }
 ```
 
-![1660031258434](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660031258434.png)
+![1660031258434](./images/1660031258434.png)
 
 ### align-items项目在交叉轴上的对齐方式(单行有效)
 
@@ -165,7 +165,7 @@
 |center|交叉轴中点对齐|
 |baseline|项目第一行文字的基线对齐|
 
-![1660032529004](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660032529004.png)
+![1660032529004](./images/1660032529004.png)
 
 ### align-items项目在多轴的对齐方式(多行)
 
@@ -178,7 +178,7 @@
 |space-between|两端对齐,轴线之间间隔平均分配|
 |space-around|每个项目的两侧间隔相等，轴线之间的间隔比项目于两侧间距离大一倍|
 
-![1660032941032](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660032941032.png)
+![1660032941032](./images/1660032941032.png)
 
 ## align-self单个项目对齐方式
 
@@ -204,7 +204,7 @@
      
 ```
 
-![1660033976606](E:\Vscode\30dayslearning\src\03-css-basic-learning\13-flex弹性布局\images\1660033976606.png)
+![1660033976606](./images/1660033976606.png)
 
 ### flex-grow项目主轴放大系数
 
