23-grid网格布局下

--- a/src/03-css-basic-learning/13-flex弹性布局/13-弹性布局笔记.md
+++ b/src/03-css-basic-learning/13-flex弹性布局/13-弹性布局笔记.md
@@ -172,7 +172,7 @@
 |属性值|描述|
 |:---|:---|
 |stretch|默认拉伸所有行来填满剩余空间（默认）|
-|flex-end|交叉轴起点对齐|
+|flex-start|交叉轴起点对齐|
 |flex-end|交叉轴终点对齐|
 |center|交叉轴中点对齐|
 |space-between|两端对齐,轴线之间间隔平均分配|
