--- a/src/03-css-basic-learning/14-grid网格布局/14-网格布局笔记.md
+++ b/src/03-css-basic-learning/14-grid网格布局/14-网格布局笔记.md
@@ -25,7 +25,7 @@
 > 正常情况下，n行和m列会产生n*m个单元格
 > 
 
-![1660268825514](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660268825514.png)
+![1660268825514](./images/1660268825514.png)
 
 
 ### 网格线
@@ -52,7 +52,7 @@
 
 > 将grid容器里所有项目看作一个整体，称为网格内容
 
-![1660269701749](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660269701749.png)
+![1660269701749](./images/1660269701749.png)
 
 
 ## grid容器属性
@@ -109,14 +109,14 @@
 >  置了宽，宽大于单元格计算后的宽，则单元格等于是设置的内容宽
 >  ```
 
-![1660292682898](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660292682898.png)
+![1660292682898](./images/1660292682898.png)
 
-![1660293477841](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660293477841.png)
+![1660293477841](./images/1660293477841.png)
 
 
 > grid-template-columns和 grid-template-rows属性里还用[]给每根网格线设置名称
 
-![1660293998788](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660293998788.png)
+![1660293998788](./images/1660293998788.png)
 
 ### row-gap、column-gap、gap
 
@@ -133,7 +133,7 @@
         gap: 20px;
 ```
 
-![1660294599065](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660294599065.png)
+![1660294599065](./images/1660294599065.png)
 
 ### grid-templates-areas属性
 
@@ -171,7 +171,7 @@ grid-template-areas:
       }
 ```
 
-![1660295300711](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660295300711.png)
+![1660295300711](./images/1660295300711.png)
 
 ### grid-auto-flow控制容器排列顺序
 
@@ -187,12 +187,142 @@ grid-template-areas:
 > grid-auto-row隐式创建的网格横向轨道高度
 > 显示网格----由grid-template-columns和grid-template-row创建的
 
-![1660296466613](E:\Vscode\30dayslearning\src\03-css-basic-learning\14-grid网格布局\images\1660296466613.png)
+![1660296466613](./images/1660296466613.png)
 
 ### justify-items属性
 
-> justify-items属性设置单元格内容的水平位置对齐方式
-> 
+> justify-items属性设置**单元格内容（item项）**的水平位置对齐方式
+
+|属性值|描述|
+|:---|:---|
+|stretch|默认拉伸填满剩余空间（默认）|
+|start|单元格内容水平方向左对齐|
+|end|单元格内容水平方向右对齐|
+|center|单元格内容水平方向居中对齐|
+
+
+
+![1660296466613](./images/1660354187515.png)
+
+![1660296466613](./images/1660353872070.png)
+
+![1660296466613](./images/1660353930208.png)
+
 ### align-items属性
 
-> align-items属性设置单元格内容的垂直位置对齐方式
+|属性值|描述|
+|:---|:---|
+|stretch|默认拉伸填满剩余空间（默认）|
+|start|单元格内容垂直方向左对齐|
+|end|单元格内容垂直方向右对齐|
+|center|单元格内容垂直方向居中对齐|
+
+> align-items属性设置**单元格内容**的垂直位置对齐方式
+
+![1660354240995](./images/1660354240995.png)
+
+![1660354272945](./images/1660354272945.png)
+
+![1660354310535](./images/1660354310535.png)
+
+
+
+![1660354402806](./images/1660354402806.png)
+
+![1660354471367](./images/1660354471367.png)
+
+![1660354886190](./images/1660354886190.png)
+
+### place-items属性
+
+> place-items:是align-items和justify-items复合写法;
+> 例如：place-items: strat（align-items） end（justify-items）;
+
+### justify-content属性
+
+> justify-content设置整个内容区域在容器里的水平对齐方式
+
+|属性值|描述|
+|:---|:---|
+|start|默认，对齐容器左边框|
+|flex-end|对齐容器右边框|
+|center|水平对齐容器中间|
+|stretch|单元格大小没有指定时，拉伸宽占据整个容器宽|
+|space-between|两端对齐,容器与项目之间没有间隔|
+|space-around|每个项目的两侧间隔相等|
+|space-evenly|每个项目间隔相等|
+
+![1660356148912](./images/1660356148912.png)
+
+![1660356196196](./images/1660356196196.png)
+
+![1660356229379](./images/1660356229379.png)
+
+![1660356291689](./images/1660356291689.png)
+
+![1660356324713](./images/1660356324713.png)
+
+
+### align-content属性
+
+> align-content设置整个内容区域在容器里的垂直对齐方式
+
+|属性值|描述|
+|:---|:---|
+|start|默认，对齐容器上框|
+|flex-end|对齐容器下框|
+|center|垂直对齐容器中间|
+|stretch|单元格大小没有指定时，拉伸高占据整个容器高|
+|space-between|两端对齐,容器与项目之间没有间隔|
+|space-around|每个项目的两侧间隔相等|
+|space-evenly|每个项目间隔相等|
+
+### place-content属性
+
+> place-content:align-content和justify-content的简写
+
+## grid项目属性
+
+### 项目的方向通过指定项目的四个边框的位置，四个边框分别对应哪根网格线
+
+|属性值|描述|
+|:---|:---|
+|grid-column-start|项目左边框所在的垂直网格线|
+|grid-column-end|项目右边框所在的垂直网格线|
+|grid-row-start|项目上边框所在的水平网格线|
+|grid-row-end|项目下边框所在的水平网格线|
+
+> 当项目只指定了属性中的一个，其他未设定的会采用默认位置，且一个项目只占一个单元格
+> 项目默认值由grid-auto-flow属性决定
+> 如果值为row，则先行后列
+> 如果值为column，则列后行
+> 值为row dense，则先行后列,尽可能紧密填满，不出现空格
+> 值为column dense，则则列后行,尽可能紧密填满，不出现空格
+> 建议写完整
+
+![1660357387549](./images/1660357387549.png)
+
+> 当项目只指定了属性中的一个，其他未设定的会采用默认位置，且一个项目只占一个单元格
+
+![1660357505569](./images/1660357505569.png)
+
+> 可以使用网格线名字指定项目所在单元格内容
+> span关键字来指定位置，这四个属性值还可以使用span关键字表示跨越，即左右（上下）跨越多少个网格。
+> auto关键字 自动加和不加效果一样，自动跨度为1，唯一左右是简写中占坑
+> 项目发生项目重叠，通过z-index指定重叠顺序
+
+### grid-column、grid-row属性
+
+>  grid-column是grid-column-start/end，grid-rowgrid-row-start/end的简写模式。通过`/`隔开。
+
+### grid-area属性
+
+> grid-area属性指定项目所在单元格位置
+
+### justify-self和align-self
+
+> 单元格内容单独在单元格里水平垂直对齐的方式
+
+### place-self合并写法
+
+![1660378051513](./images/1660378051513.png)
