25-swiper事件及移动端基础

--- a/src/03-css-basic-learning/15-移动开发核心基础/15-移动开发核心基础.md
+++ b/src/03-css-basic-learning/15-移动开发核心基础/15-移动开发核心基础.md
@@ -152,3 +152,173 @@
 |vw/vh|相对单位，是视口单位，用于移动端布局，常用vw，vh较少使用，1vw=视口宽度的1%，1vh=视口宽度的1%|
 |vmax|当前vw和wh中较大的一个值（竖屏时，视口高，横屏时，是扣宽）|
 |vmin|当前vw和wh中较小的一个值（竖屏时，视口宽，横屏时，是扣高）|
+
+## 移动端常用布局处理技术
+
+- 流体布局（百分比）布局
+- rem和vw布局
+- 响应式布局
+- flex弹性布局（工具，不算布局）
+- grid网格布局（工具，不算布局）
+
+### 移动端样式重置
+
+```html
+  /* 表单或者a标签在手机点击时会出现边框或彩色的背景区域，意思是去除点击背景框 */
+        -webkit-tap-highlight-color: transparent;
+        /* 移动端浏览器默认的外观在iso上加上这个属性才能给按钮和输入框的自定义的样式 */
+        -webkit-appearance: none;
+
+    /* 禁用长按时页面时弹出菜单 */
+      img,a{
+        -webkit-touch-callout: none;
+      }
+      /* 清除表单外轮廓 */
+      input{
+        outline: none;
+      }
+      /* 去除图片下方由空白间隙问题 */
+      img{
+        vertical-align: top;
+      }
+```
+
+## 让页面高度填充到刘海区
+
+> 在viewport中添加viewport-fit-cover
+```html
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit-cover"/>
+```
+
+## 解决底部被黑线遮挡问题
+1. 给代码添加如下代码
+```
+    /*兼容ios<11.2*/
+    padding-bottom: constant(safe-area-inset-bottom);
+    /*兼容ios>11.2*/
+    padding-bottom: env(safe-area-inset-bottom);
+```
+
+2. 100px时tabbar原来的高度
+
+```html
+/* 兼容ios>11.2 */
+        height: calc(50px + constant(safe-area-inset-bottom));
+        /* 兼容ios>11.2 */
+        height: calc(50px + env(safe-area-inset-bottom));
+```
+
+> 实际开发中一般时先constant在env
+
+## 流体布局自适应缩放
+
+1. 正方形等比缩放
+2. 图片缩放
+
+> 给子元素添加`padding-bottom: 100%;` 100%是相对于父元素的宽度。
+
+## 流体布局的思路与缺点
+
+> 流体布局的思路:
+> > 计算每个子元素占容器的百分比，平分父容器的整体大小
+> > 所有子元素的百分比加起来要等于100%
+> > 通过给子元素设置内边距实现元素空间的间隙
+
+> 流体布局的缺点
+> > 只能实现图片和容器的宽高等比缩放，没办法实现字间距、字体大小的等比缩放
+> > 实现字间距、字体大小的等比缩放需添加@meta媒体查询搭配使用
+
+## 移动端rem布局
+
+### rem适配原理
+
+> 相对单位，相对于html的fon-size的字体大小，1rem=根元素字体大小
+> 
+> 当css代码不变,将页面分成750份，页面大小在不同屏幕等比缩放，则相对的rem如下
+
+|rem|750px|375px|540px|
+|---|---|---|
+|1rem|10px|5px|7.2px|
+ 
+> 1rem=设备可视宽/对应份数
+> 将750的设计高等比分为10份，1rem=75px
+
+
+|设备可使宽|750px|375px|540px|
+|---|---|---|
+|1rem|75px|37.5px|54px|
+
+> 实际开发中，通常将屏幕分为10等份，通过不同屏幕下的fontsize大小动态计算1rem的大小
+
+### 动态获取屏幕宽度
+
+```html
+<!-- 页面初始化 -->
+  <script>
+    // 页面初始化时调用
+    initPage();
+    function initPage() {
+      // 获取html元素
+      var html = document.documentElement;
+      // 获取屏幕可视宽
+      var clientWidth = html.clientWidth;
+      // 动态设置html的font-size的大小
+      html.style.fontSize = clientWidth / 10 + "px";
+    }
+    // 当窗口发生改变时调用
+    window.onresize = initPage;
+  </script>
+```
+
+## 移动端vw布局
+
+> vw视口宽，100vw=视口宽，相当于将页面分成100等份，以此在不同的屏幕下，1vw的宽度也不同
+> 1vw大小由浏览器宽度自动转换
+
+|设备可使宽|1vw|
+|---|---|
+|750|7.5px|
+|375|3.75px|
+
+## 移动端开发常见问题
+
+1. 图片缩放
+
+> 为图片添加一个容器，固定宽度，图片宽高都为父容器的100%，同时添加`object-fit: cover;`
+
+2. 精灵图
+
+> 精灵图采用的是2倍图，通过`background-size:50%`,将图片大小缩放到一半，测量时，也按照一半的大小来测量
+
+3. 正反向缩放和等比缩放
+
+> 给子元设置 padding-bottom: 100%;使其宽度与父元素的宽度相等。
+
+```html
+ .box {
+        background-color: rgb(255, 164, 46);
+        width: 200px;
+        height: 100px;
+      }
+      .item {
+        width: 100%;
+        /* 与父元素宽度相等 */
+        padding-bottom: 100%;
+        background-color: rgba(100, 198, 255, 0.4);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="box">
+      <div class="item"></div>
+    </div>
+```
+## 经典1像素问题
+
+> 1像素问题可以从两方面分析分别是psd设计稿和1px实际显示大小
+
+1. psd设计稿
+
+> 移动端设计稿通常时以750px宽进行设计，而实际开发代码是按照375px开发，以此设计稿的1px对应代码为0.5px
+> 但是在不同的手机上，不同浏览器对小时的处理确实不一样
