26-响应式布局

--- a/src/03-css-basic-learning/15-移动开发核心基础/15-移动开发核心基础.md
+++ b/src/03-css-basic-learning/15-移动开发核心基础/15-移动开发核心基础.md
@@ -240,7 +240,7 @@
 |rem|750px|375px|540px|
 |---|---|---|
 |1rem|10px|5px|7.2px|
- 
+
 > 1rem=设备可视宽/对应份数
 > 将750的设计高等比分为10份，1rem=75px
 
@@ -321,4 +321,237 @@
 1. psd设计稿
 
 > 移动端设计稿通常时以750px宽进行设计，而实际开发代码是按照375px开发，以此设计稿的1px对应代码为0.5px
-> 但是在不同的手机上，不同浏览器对小时的处理确实不一样
+> 但是在不同的手机上，不同浏览器对小数的处理是不一样的
+> > 0.5px在一些老的ios设备上不支持，会将低于0.5px当作0来处理，>=0.5被当成1px处理
+> > IOS会把>=0.75的当作1px处理，<0.75当作0.5px出，<0.5当作0处理
+> > 在ios上，用height:1px和border-bottom：1px效果是不同的
+> 因此直接把代码折半，设置成0.5px是达不到预期效果
+
+2. 开发中1px是根据dpr计算的,不同设备像素比对应的物理像素不同，而设计稿中的1px是psd文件的最小方格，因此开发中我们是以1个物理像素来计算的，所有dpr=2时，1像素高为当前css像素的一半，以此可以通过代码缩小高度的1半来便是，dpr=3，缩小1/3.
+
+3. 1像素解决问题
+
+> 利用伪元素绘制1px的线条，把线条放在对应的位置，利用meta查询不同设备像素比对线条进行缩放。
+
+```html
+  <style>
+      .box {
+        position: relative;
+        width: 500px;
+        height: 20px;
+      }
+      .box::after {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: block;
+        content: "";
+        width: 100%;
+        height: 1px;
+        background-color: blueviolet;
+        transform-origin: 50% 0;
+      }
+      /* 媒体查询dpr=2，需要缩放1半，及0.5 */
+      @media only screen and (-webkit-min-device-pixel-ratio: 2) {
+        .border-2px::after {
+          transform: scaleY(0.5);
+        }
+      }
+      /* 媒体查询dpr=3，需要缩放1/3，及0.33*/
+      @media only screen and (-webkit-min-device-pixel-ratio: 3) {
+        .border-3px::after {
+          transform: scaleY(0.33);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="box border-1px"></div>
+    <div class="box border-2px"></div>
+    <div class="box border-3px"></div>
+  </body>
+```
+
+> 也可用js来设置
+
+```html
+ <script>
+    if (window.devicePixelRatio && devicePixelRatio >= 2) {
+      document.querySelector(".box").className = "border-1px";
+    }
+  </script>
+```
+
+## 多终端-响应式布局
+
+> 响应式布局：只需要开发一套代码，就能够使页面适用不同屏幕宽。
+> 响应式布局原理：通过媒体查询检测窗口宽度，针对不同视口宽做出相应的代码处理，展现不同布局和内容。
+
+### 媒体查询
+
+> 媒体查询：通过检测屏幕尺寸显示不同样式。
+
+> 一个完整的媒体查询语句包含以下四个部分
+> > 1. 关键字@media
+> > 2. 媒体类型
+> > 3. 逻辑运算符
+> > 4. 媒体特性
+
+#### 媒体类型
+
+|媒体类型|说明|
+|---|---|
+|all|默认，适应于所有设备|
+|screen|适用于屏幕|
+|print|适用于在打印预览模式下在屏幕上查看的材料和文档|
+|speech|适用于语音合成器|
+
+> 媒体查询可以只写媒体类型
+
+#### 媒体特性
+
+> 媒体特性描述了用户代理，输出设备或浏览器环境的具体特征
+> 媒体特性得表达式可以省略
+> 每条媒体特性必须用`()`括起来
+> 多个媒体特性有逻辑运算符连接
+
+|媒体特性|说明|
+|---|---|
+|width|设备屏幕的宽|
+|min-width|设备屏幕最小宽（如min-width:400px，表示`>=`400px）|
+|max-width|max-width:400px，表示`<=`400px）|
+|-webkit-device-pixel-ratio|设备像素比的值（只有-webkit内核才支持）|
+|-webkit-max-device-pixel-ratio|设备像素比的最大值（只有-webkit内核才支持）|
+|-webkit-min-device-pixel-ratio|设备像素比的最小值（只有-webkit内核才支持）|
+|oriebtation|当前屏幕的方向使横屏还是竖屏<br>portrat:表示竖屏<br>landscap表示横屏|
+
+#### 媒体查询中逻辑运算符
+
+|逻辑运算符|说明|
+|---|---|
+|and|用于多个媒体查询规则组合成单个媒体查询，当每个查询规则为真则该媒体查询为真|
+|`,`逗号|逗号分隔的每个查询规则分开处理，任何查询规则为`true`则整条媒体查询为`true`|
+|not|否定当前媒体查询，只能用于否定整个媒体查询规则，当出现逗号not只作用于逗号前的整条查询规则|
+|only|用于解决老版本的浏览器的查询语句，只会把查询语句解释为screen，加上only则可解决|
+
+### 响应式断点和书写位置
+
+> 当需要为不同屏幕尺寸设置不同样式时，而这些响应的尺寸则称为断点
+
+#### 响应式断点（阈值）的设定
+
+> 响应式断点由公司需求设定，以下是行业的一个标准参考断点(bootstrap框架内部断点)
+
+|屏幕大小|栅格系统class名区分前缀|断点|
+|---|---|---|
+|超小屏（extra small）||<576px|
+|小屏（small）|-sm|576px ~ 768px(包含等于)|
+|中屏（medium）|-md|768px ~ 992px(包含等于)|
+|大屏（Large）|-lg|992px ~ 1200px(包含等于)|
+|超大屏（x-large）|-xlg|1200px ~ 1400px(包含等于)|
+|超大大屏（xx-large）|-xxlg|> 1400px(包含等于)|
+
+#### 引入方式
+
+1. 写在单独的css文件中，通过link标签引入，但引入时要放在所有css样式最后面
+2. 不同断点代码写入不同的css文件中，但不推荐使用
+3. 通过link引用，在media中设置对应断点
+
+```html
+    <link rel="stylesheet" href="a.css" media="screen and (min-width:600px)">
+```
+
+### 响应式两种适配方案
+
+1. pc端优先，先以pc端为主，书写样式后再过渡到其他尺寸
+
+```html
+@media screen and (max-width: 1200px) {
+        .item {
+          width: 20%;
+        }
+      }
+      @media screen and (max-width: 992px) {
+        .item {
+          width: 25%;
+        }
+      }
+      @media screen and (max-width: 768px) {
+        .item {
+          width: 33.33333333%;
+        }
+      }
+      @media screen and (max-width: 576px) {
+        .item {
+          width: 50%;
+        }
+      }
+      @media screen and (max-width: 400px) {
+        .item {
+          width: 100%;
+        }
+      }
+```
+
+2. 移动端优先，先以移动端为主，书写样式后再过渡到其他尺寸
+
+```html
+@media screen and (min-width: 400px) {
+        .item {
+          width: 50%;
+        }
+      }
+      @media screen and (min-width: 679px) {
+        .item {
+          width: 33.33333333%;
+        }
+      }
+      @media screen and (min-width: 768px) {
+        .item {
+          width: 25%;
+        }
+      }
+      @media screen and (min-width: 992px) {
+        .item {
+          width: 20%;
+        }
+      }
+      @media screen and (min-width: 1200px) {
+        .item {
+          width: 16.66666667%;
+        }
+      }
+```
+
+## 响应式栅格系统
+
+> 响应式栅格系统:栅格布局和响应式断点、响应式适配方案3者结合
+
+#### 栅格布局
+
+1. 栅格布局可以理解为把一个页面或容器分成多少份
+2. 设置页面容器中子元素所占的份数
+3. 通常一个页面会被分成12份、16份、24份
+4. 一般情况下将一个页面分成12份，对应所占比如下
+
+|份数|占总份数的百分比|
+|---|---|
+|1|8.3333333%|
+|2|16.66666667%|
+|3|25%|
+|4|33.33333333%|
+|5|41.66666667%|
+|6|50%|
+|7|58.33333333%|
+|8|66.666666667%|
+|9|75%|
+|10|83.33333333%|
+|11|91.66666667%|
+|12|100%|
+
+#### 栅格布局+响应式断点实现响应式布局
+
+1. 确定页面份数
+2. 算出每一份所占总份数的比例
+3. 确定响应断点
+4. 确定响应式适配方案                                                                                                             
