--- a/src/04-javascript_basic/01-js基础.md
+++ b/src/04-javascript_basic/01-js基础.md
@@ -431,7 +431,7 @@ for (var i = 0; i < 10; i++) {
 ### 立即执行函数
 
 > 立即执行函数:Immediately-Invoked Function Expression（IIFE 立即调用函数表达式）,表达的含义是一个函数定义完后被立即执行
-> > 第一部分是定义了一个匿名函数，这个函数有自己独立的作用域。
+> > 第一部分是定义了一个匿名函数，这个函数有**自己独立的作用域**。
 > > 第二部分是后面的（），表示这个函数被执行了
 
 ```html
